# taxtracker

./: .gitignore  AGENTS.md  README.md  extract_eml.py  extract_fidelity_pdfs.py  filter_zip.py  manage.py  process_dates.py  pyproject.toml  run.sh  zip_eml_to_pdf.py  zip_eml_to_pdf.template.html  zip_eml_to_txt.py
.github/workflows/: ci.yml
src/taxtracker/: asgi.py  settings.py  wsgi.py
src/taxtracker/tracker/: admin.py  apps.py  archives.py  forms.py  models.py  tests.py  views.py
src/taxtracker/tracker/management/commands/: ensure_superuser.py
src/taxtracker/tracker/migrations/: 0001_initial.py  0002_filetype_model.py  0003_dbstoredfile_alter_attachment_file.py  0004_attachment_date.py  0005_financialyear_status_financialyearstatushistory.py
src/taxtracker/tracker/templates/admin/tracker/financialyear/: change_form.html  change_list.html  copy_to_new_year.html  download_multi_zip.html  summary.html
src/taxtracker/tracker/templates/admin/tracker/item/: change_form.html  import_archive.html  reassign_attachments.html
taxtracker/: settings.py  wsgi.py
tracker/: admin.py  models.py  tests.py
tracker/templates/admin/tracker/financialyear/: change_form.html  copy_to_new_year.html
