[project]
name = "taxtracker"
version = "0.1.0"
description = "Tax Return tracker app"
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "django==6.0.5",
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
    "ruff==0.15.13",
]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]

[tool.djlint]
profile = "django"
indent = 2
blank_line_after_tag = "load,extends"
